--- a/hystrix-dashboard/src/main/resources/application.yml
+++ b/hystrix-dashboard/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 4444
   compression:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain
   servlet:
-    context-path: /rest-consumer
+    context-path: /dashboard
 
 management:
   endpoint:
@@ -14,7 +14,7 @@ management:
     web:
       base-path: /features
       exposure:
-        include: "health,info,metrics,logfile,hystrix.stream"
+        include: "health,info,metrics,logfile"
 
 logging:
   file: log/app_log.log
@@ -25,6 +25,8 @@ logging:
 spring:
   profiles:
     active: development
+  application:
+    name: hystrix-dashboard-service  # Service registers under this name
 ---
 spring:
   profiles: laboratory
